--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 Notes_App/.vs/Notes_App/v16/Server/sqlite3/db.lock
+NoteApps/.vs/NoteApps/v16/Server/sqlite3/db.lock
+NoteApps/.vs/NoteApps/v16/Server/sqlite3/storage.ide
+NoteApps/.vs/NoteApps/v16/Server/sqlite3/storage.ide-shm
+NoteApps/.vs/NoteApps/v16/Server/sqlite3/storage.ide-wal
